feat: AOP before